refactor: 티켓북 공연 출연진 저장 수정(string->list)