@@ -2,8 +2,8 @@ package muse_kopis.muse.review.application;
 
 import jakarta.transaction.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import muse_kopis.muse.actor.domain.Actor;
 import muse_kopis.muse.auth.oauth.domain.OauthMember;
 import muse_kopis.muse.auth.oauth.domain.OauthMemberRepository;
 import muse_kopis.muse.performance.domain.Performance;
@@ -36,8 +36,7 @@ public class ReviewService {
         List<Review> reviews = reviewRepository.findAllByPerformance(performance).stream()
                 .filter(Review::isVisible)
                 .toList();
-        return reviews.stream().map(review -> ReviewResponse.from(review, performance.getCastMembers().stream().map(CastMember::toString)
-                .collect(Collectors.joining(", ")))).collect(Collectors.toList());
+        return reviews.stream().map(ReviewResponse::from).toList();
     }
 
     @Transactional
@@ -45,7 +44,9 @@ public class ReviewService {
         oauthMemberRepository.getByOauthMemberId(memberId);
         Performance performance = performanceRepository.getByPerformanceId(performanceId);
         List<Review> reviews = reviewRepository.findAllByPerformance(performance);
-        return reviews.stream().map(review -> ReviewResponse.from(review, performance.getCastMembers().stream().map(CastMember::toString).collect(
-                Collectors.joining(", ")))).collect(Collectors.toList());
+        List<Actor> castMembers = performance.getCastMembers()
+                .stream()
+                .map(CastMember::getActor).toList();
+        return reviews.stream().map(ReviewResponse::from).toList();
     }
 }
